# alpha_airdrop_monitor

./: .gitignore  Cargo.toml  README.md  install_and_run.sh
examples/: get_chatid.rs
src/: main.rs
