[package]
name = "alpha_airdrop_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teloxide = { version = "0.12", features = ["macros", "auto-send"] }
log = "0.4"
env_logger = "0.10"
chrono = "0.4.41"
dotenv = "0.15.0"